# thesis-public

./: CHANGELOG.md  README.md  ecs-accelerate.cabal  readme.md  timeline.md
Examples/: Code.c  Examples.hs  example.cabal
Literature/: acc-ffi-padl2014.pdf�Zone.Identifier  acc-llvm-haskell2015.pdf�Zone.Identifier  acc-multidev-fhpc2015.pdf�Zone.Identifier  acc-optim-icfp2013.pdf�Zone.Identifier  acc-patmat-2022.pdf�Zone.Identifier  acc-seq-fhpc2015.pdf�Zone.Identifier  acc-seq2-haskell2017.pdf�Zone.Identifier  accelerate-nested-data-parallelism.pdf�Zone.Identifier  accelerate-performance.pdf�Zone.Identifier  annotating-deeply-embedded-languages.pdf�Zone.Identifier  gpu-stencils.pdf�Zone.Identifier  independent-regions.pdf�Zone.Identifier  sum-types.pdf�Zone.Identifier
Thesis/: Progress.drawio  Thesis Defense.pptx  ThesisImages.drawio  ThesisImages2.drawio  others.txt  proposal.bbl  proposal.blg  proposal.fdb_latexmk  proposal.fls  proposal.out  proposal.tex  proposal.toc  refs.bib
src/: Benchmark.hs  Debug.hs  Example.hs  Generics.hs  Implementation.hs  Matching.hs  Minimal.hs  Store.hs  Transform.hs  TypeLevel.hs  Types.hs  Variant.hs
src/Implementation/: Chunk.hs  Conversion.hs  Map.hs  Type.hs
