cabal-version:      3.0
name:               ecs-accelerate
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Graaf, L. de (Luuk)
maintainer:         l.degraaf5@students.uu.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules: Implementation, Benchmark, Generics, Transform, TypeLevel, Variant

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base                  ^>= 4.13.0.0,
                      accelerate             >= 1.3.0.0,
                      accelerate-llvm-ptx    >= 1.3.0.0,
                      linear-accelerate      >= 0.7.0.0,
                      criterion              >= 1.6.0.0,
                      typerep-map            >= 0.6.0.0,
                      containers-accelerate  >= 0.1.0.0,
                      containers,
    hs-source-dirs:   src
    default-language: Haskell2010
