cabal-version:      3.0
name:               test
version:            0.1.0.0

license:            NONE
author:             Graaf, L. de (Luuk)
maintainer:         l.degraaf5@students.uu.nl

library
    exposed-modules: 

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
    hs-source-dirs:   src
    default-language: Haskell2010